dij/dij/y.output
   0  $accept : function_collection $end

   1  function_collection :
   2                      | exterior_function_constant function_collection

   3  exterior_function_constant : scheme begin_function command_list end_function

   4  function_constant : scheme begin_function command_list end_function

   5  scheme :
   6         | TOKEN_SCHEME scheme

   7  begin_function : TOKEN_OPEN_BLOCK

   8  command_list :
   9               | command
  10               | command_list TOKEN_SEMICOLON command

  11  end_function : TOKEN_CLOSE_BLOCK

  12  command : lvalue_list TOKEN_ASSIGN expression_list
  13          | terminated_combinator_expression
  14          | if_statement
  15          | do_statement

  16  lvalue_list :
  17              | lvalue
  18              | lvalue TOKEN_COMMA lvalue_list

  19  expression_list :
  20                  | expression
  21                  | expression TOKEN_COMMA expression_list

  22  if_statement : TOKEN_IF guarded_command_list TOKEN_FI

  23  do_statement : TOKEN_DO guarded_command_list TOKEN_OD

  24  lvalue : scheme_name
  25         | TOKEN_DEREFERENCE atomic_expression
  26         | terminated_combinator_expression

  27  guarded_command_list :
  28                       | guarded_command guarded_command_list

  29  guarded_command : expression TOKEN_GUARD command_list TOKEN_END_GUARD

  30  tier0_expression : TOKEN_DEREFERENCE atomic_expression
  31                   | atomic_expression

  32  uninitiated_combinator_expression : TOKEN_FUNCTION_APPLICATION proper_combinator_expression
  33                                    | TOKEN_FUNCTION_APPLICATION uninitiated_combinator_expression

  34  terminated_combinator_expression : proper_combinator_expression TOKEN_FUNCTION_APPLICATION
  35                                   | terminated_combinator_expression TOKEN_FUNCTION_APPLICATION

  36  proper_combinator_expression : tier0_expression
  37                               | proper_combinator_expression TOKEN_FUNCTION_APPLICATION tier0_expression
  38                               | terminated_combinator_expression TOKEN_FUNCTION_APPLICATION tier0_expression
  39                               | proper_combinator_expression TOKEN_COLON tier0_expression

  40  functional_expression : proper_combinator_expression
  41                        | terminated_combinator_expression
  42                        | uninitiated_combinator_expression
  43                        | functional_expression TOKEN_BACKSLASH atomic_expression

  44  tier1_expression : TOKEN_REFERENCE tier1_expression
  45                   | TOKEN_NOT tier1_expression
  46                   | TOKEN_SUBTRACT tier1_expression
  47                   | TOKEN_TILDE tier1_expression
  48                   | functional_expression

  49  tier2_expression : TOKEN_ADD expression

  50  tier3_expression : TOKEN_MULTIPLY expression
  51                   | TOKEN_DIVIDE expression
  52                   | TOKEN_MODULO expression
  53                   | tier2_expression

  54  tier3_point_5_expression : TOKEN_TEST_EQUALITY expression
  55                           | tier3_expression

  56  tier4_expression : TOKEN_AND expression
  57                   | tier3_point_5_expression

  58  tier5_expression : TOKEN_OR expression
  59                   | tier4_expression

  60  expression : tier1_expression
  61             | tier1_expression tier5_expression

  62  atomic_expression : TOKEN_DECIMAL_INTEGER
  63                    | TOKEN_CONSTANT
  64                    | function_constant
  65                    | scheme_name
  66                    | TOKEN_OPEN_PAREN expression TOKEN_CLOSE_PAREN

  67  scheme_name : scheme TOKEN_WORD

state 0
	$accept : . function_collection $end  (0)
	function_collection : .  (1)
	scheme : .  (5)

	TOKEN_SCHEME  shift 1
	$end  reduce 1
	TOKEN_OPEN_BLOCK  reduce 5

	function_collection  goto 2
	exterior_function_constant  goto 3
	scheme  goto 4


state 1
	scheme : TOKEN_SCHEME . scheme  (6)
	scheme : .  (5)

	TOKEN_SCHEME  shift 1
	TOKEN_WORD  reduce 5
	TOKEN_OPEN_BLOCK  reduce 5

	scheme  goto 5


state 2
	$accept : function_collection . $end  (0)

	$end  accept


state 3
	function_collection : exterior_function_constant . function_collection  (2)
	function_collection : .  (1)
	scheme : .  (5)

	TOKEN_SCHEME  shift 1
	$end  reduce 1
	TOKEN_OPEN_BLOCK  reduce 5

	function_collection  goto 6
	exterior_function_constant  goto 3
	scheme  goto 4


state 4
	exterior_function_constant : scheme . begin_function command_list end_function  (3)

	TOKEN_OPEN_BLOCK  shift 7
	.  error

	begin_function  goto 8


state 5
	scheme : TOKEN_SCHEME scheme .  (6)

	.  reduce 6


state 6
	function_collection : exterior_function_constant function_collection .  (2)

	.  reduce 2


state 7
	begin_function : TOKEN_OPEN_BLOCK .  (7)

	.  reduce 7


state 8
	exterior_function_constant : scheme begin_function . command_list end_function  (3)
	scheme : .  (5)
	command_list : .  (8)
	lvalue_list : .  (16)

	TOKEN_DECIMAL_INTEGER  shift 9
	TOKEN_OPEN_PAREN  shift 10
	TOKEN_DEREFERENCE  shift 11
	TOKEN_IF  shift 12
	TOKEN_DO  shift 13
	TOKEN_SCHEME  shift 1
	TOKEN_CONSTANT  shift 14
	TOKEN_WORD  reduce 5
	TOKEN_OPEN_BLOCK  reduce 5
	TOKEN_CLOSE_BLOCK  reduce 8
	TOKEN_SEMICOLON  reduce 8
	TOKEN_ASSIGN  reduce 16

	scheme  goto 15
	command_list  goto 16
	function_constant  goto 17
	command  goto 18
	lvalue_list  goto 19
	terminated_combinator_expression  goto 20
	if_statement  goto 21
	do_statement  goto 22
	lvalue  goto 23
	scheme_name  goto 24
	atomic_expression  goto 25
	tier0_expression  goto 26
	proper_combinator_expression  goto 27


state 9
	atomic_expression : TOKEN_DECIMAL_INTEGER .  (62)

	.  reduce 62


state 10
	atomic_expression : TOKEN_OPEN_PAREN . expression TOKEN_CLOSE_PAREN  (66)
	scheme : .  (5)

	TOKEN_DECIMAL_INTEGER  shift 9
	TOKEN_OPEN_PAREN  shift 10
	TOKEN_TILDE  shift 28
	TOKEN_SUBTRACT  shift 29
	TOKEN_NOT  shift 30
	TOKEN_REFERENCE  shift 31
	TOKEN_DEREFERENCE  shift 32
	TOKEN_SCHEME  shift 1
	TOKEN_FUNCTION_APPLICATION  shift 33
	TOKEN_CONSTANT  shift 14
	TOKEN_WORD  reduce 5
	TOKEN_OPEN_BLOCK  reduce 5

	scheme  goto 15
	function_constant  goto 17
	terminated_combinator_expression  goto 34
	expression  goto 35
	scheme_name  goto 36
	atomic_expression  goto 25
	tier0_expression  goto 26
	uninitiated_combinator_expression  goto 37
	proper_combinator_expression  goto 38
	functional_expression  goto 39
	tier1_expression  goto 40


state 11
	lvalue : TOKEN_DEREFERENCE . atomic_expression  (25)
	tier0_expression : TOKEN_DEREFERENCE . atomic_expression  (30)
	scheme : .  (5)

	TOKEN_DECIMAL_INTEGER  shift 9
	TOKEN_OPEN_PAREN  shift 10
	TOKEN_SCHEME  shift 1
	TOKEN_CONSTANT  shift 14
	TOKEN_WORD  reduce 5
	TOKEN_OPEN_BLOCK  reduce 5

	scheme  goto 15
	function_constant  goto 17
	scheme_name  goto 36
	atomic_expression  goto 41


state 12
	if_statement : TOKEN_IF . guarded_command_list TOKEN_FI  (22)
	scheme : .  (5)
	guarded_command_list : .  (27)

	TOKEN_DECIMAL_INTEGER  shift 9
	TOKEN_OPEN_PAREN  shift 10
	TOKEN_TILDE  shift 28
	TOKEN_SUBTRACT  shift 29
	TOKEN_NOT  shift 30
	TOKEN_REFERENCE  shift 31
	TOKEN_DEREFERENCE  shift 32
	TOKEN_SCHEME  shift 1
	TOKEN_FUNCTION_APPLICATION  shift 33
	TOKEN_CONSTANT  shift 14
	TOKEN_WORD  reduce 5
	TOKEN_OPEN_BLOCK  reduce 5
	TOKEN_FI  reduce 27

	scheme  goto 15
	function_constant  goto 17
	terminated_combinator_expression  goto 34
	expression  goto 42
	guarded_command_list  goto 43
	scheme_name  goto 36
	atomic_expression  goto 25
	guarded_command  goto 44
	tier0_expression  goto 26
	uninitiated_combinator_expression  goto 37
	proper_combinator_expression  goto 38
	functional_expression  goto 39
	tier1_expression  goto 40


state 13
	do_statement : TOKEN_DO . guarded_command_list TOKEN_OD  (23)
	scheme : .  (5)
	guarded_command_list : .  (27)

	TOKEN_DECIMAL_INTEGER  shift 9
	TOKEN_OPEN_PAREN  shift 10
	TOKEN_TILDE  shift 28
	TOKEN_SUBTRACT  shift 29
	TOKEN_NOT  shift 30
	TOKEN_REFERENCE  shift 31
	TOKEN_DEREFERENCE  shift 32
	TOKEN_SCHEME  shift 1
	TOKEN_FUNCTION_APPLICATION  shift 33
	TOKEN_CONSTANT  shift 14
	TOKEN_WORD  reduce 5
	TOKEN_OPEN_BLOCK  reduce 5
	TOKEN_OD  reduce 27

	scheme  goto 15
	function_constant  goto 17
	terminated_combinator_expression  goto 34
	expression  goto 42
	guarded_command_list  goto 45
	scheme_name  goto 36
	atomic_expression  goto 25
	guarded_command  goto 44
	tier0_expression  goto 26
	uninitiated_combinator_expression  goto 37
	proper_combinator_expression  goto 38
	functional_expression  goto 39
	tier1_expression  goto 40


state 14
	atomic_expression : TOKEN_CONSTANT .  (63)

	.  reduce 63


state 15
	function_constant : scheme . begin_function command_list end_function  (4)
	scheme_name : scheme . TOKEN_WORD  (67)

	TOKEN_WORD  shift 46
	TOKEN_OPEN_BLOCK  shift 7
	.  error

	begin_function  goto 47


state 16
	exterior_function_constant : scheme begin_function command_list . end_function  (3)
	command_list : command_list . TOKEN_SEMICOLON command  (10)

	TOKEN_CLOSE_BLOCK  shift 48
	TOKEN_SEMICOLON  shift 49
	.  error

	end_function  goto 50


state 17
	atomic_expression : function_constant .  (64)

	.  reduce 64


state 18
	command_list : command .  (9)

	.  reduce 9


state 19
	command : lvalue_list . TOKEN_ASSIGN expression_list  (12)

	TOKEN_ASSIGN  shift 51
	.  error


state 20
	command : terminated_combinator_expression .  (13)
	lvalue : terminated_combinator_expression .  (26)
	terminated_combinator_expression : terminated_combinator_expression . TOKEN_FUNCTION_APPLICATION  (35)
	proper_combinator_expression : terminated_combinator_expression . TOKEN_FUNCTION_APPLICATION tier0_expression  (38)

	TOKEN_FUNCTION_APPLICATION  shift 52
	TOKEN_CLOSE_BLOCK  reduce 13
	TOKEN_COMMA  reduce 26
	TOKEN_SEMICOLON  reduce 13
	TOKEN_ASSIGN  reduce 26
	TOKEN_END_GUARD  reduce 13


state 21
	command : if_statement .  (14)

	.  reduce 14


state 22
	command : do_statement .  (15)

	.  reduce 15


state 23
	lvalue_list : lvalue .  (17)
	lvalue_list : lvalue . TOKEN_COMMA lvalue_list  (18)

	TOKEN_COMMA  shift 53
	TOKEN_ASSIGN  reduce 17


state 24
	lvalue : scheme_name .  (24)
	atomic_expression : scheme_name .  (65)

	TOKEN_COLON  reduce 65
	TOKEN_COMMA  reduce 24
	TOKEN_ASSIGN  reduce 24
	TOKEN_FUNCTION_APPLICATION  reduce 65


state 25
	tier0_expression : atomic_expression .  (31)

	.  reduce 31


state 26
	proper_combinator_expression : tier0_expression .  (36)

	.  reduce 36


state 27
	terminated_combinator_expression : proper_combinator_expression . TOKEN_FUNCTION_APPLICATION  (34)
	proper_combinator_expression : proper_combinator_expression . TOKEN_FUNCTION_APPLICATION tier0_expression  (37)
	proper_combinator_expression : proper_combinator_expression . TOKEN_COLON tier0_expression  (39)

	TOKEN_COLON  shift 54
	TOKEN_FUNCTION_APPLICATION  shift 55
	.  error


state 28
	tier1_expression : TOKEN_TILDE . tier1_expression  (47)
	scheme : .  (5)

	TOKEN_DECIMAL_INTEGER  shift 9
	TOKEN_OPEN_PAREN  shift 10
	TOKEN_TILDE  shift 28
	TOKEN_SUBTRACT  shift 29
	TOKEN_NOT  shift 30
	TOKEN_REFERENCE  shift 31
	TOKEN_DEREFERENCE  shift 32
	TOKEN_SCHEME  shift 1
	TOKEN_FUNCTION_APPLICATION  shift 33
	TOKEN_CONSTANT  shift 14
	TOKEN_WORD  reduce 5
	TOKEN_OPEN_BLOCK  reduce 5

	scheme  goto 15
	function_constant  goto 17
	terminated_combinator_expression  goto 34
	scheme_name  goto 36
	atomic_expression  goto 25
	tier0_expression  goto 26
	uninitiated_combinator_expression  goto 37
	proper_combinator_expression  goto 38
	functional_expression  goto 39
	tier1_expression  goto 56


state 29
	tier1_expression : TOKEN_SUBTRACT . tier1_expression  (46)
	scheme : .  (5)

	TOKEN_DECIMAL_INTEGER  shift 9
	TOKEN_OPEN_PAREN  shift 10
	TOKEN_TILDE  shift 28
	TOKEN_SUBTRACT  shift 29
	TOKEN_NOT  shift 30
	TOKEN_REFERENCE  shift 31
	TOKEN_DEREFERENCE  shift 32
	TOKEN_SCHEME  shift 1
	TOKEN_FUNCTION_APPLICATION  shift 33
	TOKEN_CONSTANT  shift 14
	TOKEN_WORD  reduce 5
	TOKEN_OPEN_BLOCK  reduce 5

	scheme  goto 15
	function_constant  goto 17
	terminated_combinator_expression  goto 34
	scheme_name  goto 36
	atomic_expression  goto 25
	tier0_expression  goto 26
	uninitiated_combinator_expression  goto 37
	proper_combinator_expression  goto 38
	functional_expression  goto 39
	tier1_expression  goto 57


state 30
	tier1_expression : TOKEN_NOT . tier1_expression  (45)
	scheme : .  (5)

	TOKEN_DECIMAL_INTEGER  shift 9
	TOKEN_OPEN_PAREN  shift 10
	TOKEN_TILDE  shift 28
	TOKEN_SUBTRACT  shift 29
	TOKEN_NOT  shift 30
	TOKEN_REFERENCE  shift 31
	TOKEN_DEREFERENCE  shift 32
	TOKEN_SCHEME  shift 1
	TOKEN_FUNCTION_APPLICATION  shift 33
	TOKEN_CONSTANT  shift 14
	TOKEN_WORD  reduce 5
	TOKEN_OPEN_BLOCK  reduce 5

	scheme  goto 15
	function_constant  goto 17
	terminated_combinator_expression  goto 34
	scheme_name  goto 36
	atomic_expression  goto 25
	tier0_expression  goto 26
	uninitiated_combinator_expression  goto 37
	proper_combinator_expression  goto 38
	functional_expression  goto 39
	tier1_expression  goto 58


state 31
	tier1_expression : TOKEN_REFERENCE . tier1_expression  (44)
	scheme : .  (5)

	TOKEN_DECIMAL_INTEGER  shift 9
	TOKEN_OPEN_PAREN  shift 10
	TOKEN_TILDE  shift 28
	TOKEN_SUBTRACT  shift 29
	TOKEN_NOT  shift 30
	TOKEN_REFERENCE  shift 31
	TOKEN_DEREFERENCE  shift 32
	TOKEN_SCHEME  shift 1
	TOKEN_FUNCTION_APPLICATION  shift 33
	TOKEN_CONSTANT  shift 14
	TOKEN_WORD  reduce 5
	TOKEN_OPEN_BLOCK  reduce 5

	scheme  goto 15
	function_constant  goto 17
	terminated_combinator_expression  goto 34
	scheme_name  goto 36
	atomic_expression  goto 25
	tier0_expression  goto 26
	uninitiated_combinator_expression  goto 37
	proper_combinator_expression  goto 38
	functional_expression  goto 39
	tier1_expression  goto 59


state 32
	tier0_expression : TOKEN_DEREFERENCE . atomic_expression  (30)
	scheme : .  (5)

	TOKEN_DECIMAL_INTEGER  shift 9
	TOKEN_OPEN_PAREN  shift 10
	TOKEN_SCHEME  shift 1
	TOKEN_CONSTANT  shift 14
	TOKEN_WORD  reduce 5
	TOKEN_OPEN_BLOCK  reduce 5

	scheme  goto 15
	function_constant  goto 17
	scheme_name  goto 36
	atomic_expression  goto 60


state 33
	uninitiated_combinator_expression : TOKEN_FUNCTION_APPLICATION . proper_combinator_expression  (32)
	uninitiated_combinator_expression : TOKEN_FUNCTION_APPLICATION . uninitiated_combinator_expression  (33)
	scheme : .  (5)

	TOKEN_DECIMAL_INTEGER  shift 9
	TOKEN_OPEN_PAREN  shift 10
	TOKEN_DEREFERENCE  shift 32
	TOKEN_SCHEME  shift 1
	TOKEN_FUNCTION_APPLICATION  shift 33
	TOKEN_CONSTANT  shift 14
	TOKEN_WORD  reduce 5
	TOKEN_OPEN_BLOCK  reduce 5

	scheme  goto 15
	function_constant  goto 17
	terminated_combinator_expression  goto 61
	scheme_name  goto 36
	atomic_expression  goto 25
	tier0_expression  goto 26
	uninitiated_combinator_expression  goto 62
	proper_combinator_expression  goto 63


state 34
	terminated_combinator_expression : terminated_combinator_expression . TOKEN_FUNCTION_APPLICATION  (35)
	proper_combinator_expression : terminated_combinator_expression . TOKEN_FUNCTION_APPLICATION tier0_expression  (38)
	functional_expression : terminated_combinator_expression .  (41)

	TOKEN_FUNCTION_APPLICATION  shift 52
	TOKEN_CLOSE_BLOCK  reduce 41
	TOKEN_CLOSE_PAREN  reduce 41
	TOKEN_BACKSLASH  reduce 41
	TOKEN_COMMA  reduce 41
	TOKEN_SEMICOLON  reduce 41
	TOKEN_ADD  reduce 41
	TOKEN_MULTIPLY  reduce 41
	TOKEN_DIVIDE  reduce 41
	TOKEN_MODULO  reduce 41
	TOKEN_OR  reduce 41
	TOKEN_AND  reduce 41
	TOKEN_GUARD  reduce 41
	TOKEN_END_GUARD  reduce 41
	TOKEN_TEST_EQUALITY  reduce 41


state 35
	atomic_expression : TOKEN_OPEN_PAREN expression . TOKEN_CLOSE_PAREN  (66)

	TOKEN_CLOSE_PAREN  shift 64
	.  error


state 36
	atomic_expression : scheme_name .  (65)

	.  reduce 65


state 37
	functional_expression : uninitiated_combinator_expression .  (42)

	.  reduce 42


state 38
	terminated_combinator_expression : proper_combinator_expression . TOKEN_FUNCTION_APPLICATION  (34)
	proper_combinator_expression : proper_combinator_expression . TOKEN_FUNCTION_APPLICATION tier0_expression  (37)
	proper_combinator_expression : proper_combinator_expression . TOKEN_COLON tier0_expression  (39)
	functional_expression : proper_combinator_expression .  (40)

	TOKEN_COLON  shift 54
	TOKEN_FUNCTION_APPLICATION  shift 55
	TOKEN_CLOSE_BLOCK  reduce 40
	TOKEN_CLOSE_PAREN  reduce 40
	TOKEN_BACKSLASH  reduce 40
	TOKEN_COMMA  reduce 40
	TOKEN_SEMICOLON  reduce 40
	TOKEN_ADD  reduce 40
	TOKEN_MULTIPLY  reduce 40
	TOKEN_DIVIDE  reduce 40
	TOKEN_MODULO  reduce 40
	TOKEN_OR  reduce 40
	TOKEN_AND  reduce 40
	TOKEN_GUARD  reduce 40
	TOKEN_END_GUARD  reduce 40
	TOKEN_TEST_EQUALITY  reduce 40

